--- a/src/main/resources/static/css/hotelPage.css
+++ b/src/main/resources/static/css/hotelPage.css
@@ -69,8 +69,8 @@
 .slider > .thumb {
     position: absolute;
     z-index: 3;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     background-color: #6200ee;
     border-radius: 50%;
 }
@@ -122,4 +122,9 @@ input[type="range"]::-webkit-slider-thumb {
     text-align: right;
     padding-top: 15px;
     padding-right: 6px;
+}
+
+.card a{
+    text-decoration: none;
+    color: black;
 }
