--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -78,47 +78,104 @@
 
     </div>
 
+<!---->
+    <div id="change_password_modal">
+        <div class="title w-100 border-bottom mb-2 py-2 fw-bold">
+            <span class="fs-5">비밀번호 변경</span>
+        </div>
+        <div class="modal-body">
+            <input type="password" class="form-control margin-input" id="current_password" minlength="8" name="pwd" placeholder="현재 비밀번호" required autofocus >
+            <form th:action="@{/join}" method="post" name="regForm" class="needs-validation-modal" th:object="${memberDto}"><!--modelAttribute="memberDto"-->
 
 
-    <!-- Modal -->
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">비밀번호 변경</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <input type="password" class="form-control" id="password" minlength="8" name="pwd" placeholder="새 비밀번호" required>
+                <div  class="progress" style="height: 5px;">
+                    <div id="progressbar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+
+                    </div>
                 </div>
-                <div class="modal-body">
-                    <input type="password" class="form-control margin-input" id="current_password" minlength="8" name="pwd" placeholder="현재 비밀번호" required autofocus >
-                    <form th:action="@{/join}" method="post" name="regForm" class="needs-validation-modal" th:object="${memberDto}"><!--modelAttribute="memberDto"-->
+                <small id="passwordHelpBlock" class="form-text text-muted" style="font-size: 13px">
+                    영문, 숫자, 특수문자를 조합해서 입력해주세요. (8-16자)
+                </small>
 
+                <div id="feedbackin" class="valid-feedback">
 
-                        <input type="password" class="form-control" id="password" minlength="8" name="pwd" placeholder="새 비밀번호" required>
-                        <div  class="progress" style="height: 5px;">
-                            <div id="progressbar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-
-                            </div>
-                        </div>
-                        <small id="passwordHelpBlock" class="form-text text-muted" style="font-size: 13px">
-                            영문, 숫자, 특수문자를 조합해서 입력해주세요. (8-16자)
-                        </small>
-
-                        <div id="feedbackin" class="valid-feedback">
-
-                        </div>
-                        <div id="feedbackirn" class="invalid-feedback" style="font-size: 13px">
-
-                        </div>
-                    </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="password_cancle()">취소</button>
-                    <button type="button" class="btn btn-primary" id="change_password_apply" onclick="password_change()">변경</button>
+                <div id="feedbackirn" class="invalid-feedback" style="font-size: 13px">
+
                 </div>
-            </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="password_cancle()">취소</button>
+            <button type="button" class="btn btn-primary" id="change_password_apply" onclick="password_change()">변경</button>
         </div>
 
+
     </div>
+
+<!--    -->
+    <div id="findPwd" style="width: 500px;border-radius: 15px">
+        <div class="title w-100 border-bottom mb-2 py-2 fw-bold">
+            <span class="fs-5">비밀번호 찾기</span>
+        </div>
+        <label class="form-label " for="inputEmail">이메일</label>
+        <input class="form-control mb-2" type="tel" id="inputEmail" required
+               autofocus placeholder="회원가입시 등록한 이메일을 입력해주세요">
+
+        <label class="form-label " for="authEmail">인증번호</label>
+        <div class="input-group mb-3">
+            <input class="form-control" type="text" id="authEmail" required
+                   placeholder="예)123456" >
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2-sendEmail" th:text="전송"></button>
+        </div>
+
+        <div class="button_box text-center">
+            <input class="btn btn-secondary modal_close_btn" type="submit" value="취소" style="width: 6rem">
+            <input class="btn btn-success" type="submit" value="확인" id="applyEmailAuth" style="width: 6rem">
+        </div>
+
+
+    </div>
+    <!-- Modal -->
+<!--    <div class="change_password_modal" >-->
+<!--        <div class="modal-dialog modal-dialog-centered">-->
+<!--            <div class="modal-content">-->
+<!--                <div class="modal-header">-->
+<!--                    <h1 class="modal-title fs-5" id="staticBackdropLabel">비밀번호 변경</h1>-->
+<!--                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+<!--                </div>-->
+<!--                <div class="modal-body">-->
+<!--                    <input type="password" class="form-control margin-input" id="current_password" minlength="8" name="pwd" placeholder="현재 비밀번호" required autofocus >-->
+<!--                    <form th:action="@{/join}" method="post" name="regForm" class="needs-validation-modal" th:object="${memberDto}">&lt;!&ndash;modelAttribute="memberDto"&ndash;&gt;-->
+
+
+<!--                        <input type="password" class="form-control" id="password" minlength="8" name="pwd" placeholder="새 비밀번호" required>-->
+<!--                        <div  class="progress" style="height: 5px;">-->
+<!--                            <div id="progressbar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">-->
+
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <small id="passwordHelpBlock" class="form-text text-muted" style="font-size: 13px">-->
+<!--                            영문, 숫자, 특수문자를 조합해서 입력해주세요. (8-16자)-->
+<!--                        </small>-->
+
+<!--                        <div id="feedbackin" class="valid-feedback">-->
+
+<!--                        </div>-->
+<!--                        <div id="feedbackirn" class="invalid-feedback" style="font-size: 13px">-->
+
+<!--                        </div>-->
+<!--                    </form>-->
+<!--                </div>-->
+<!--                <div class="modal-footer">-->
+<!--                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="password_cancle()">취소</button>-->
+<!--                    <button type="button" class="btn btn-primary" id="change_password_apply" onclick="password_change()">변경</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--    </div>-->
     <!--비밀번호 변경 모달 끝-->
 
     <div class="modal fade" id="staticBackdrop-phone" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
