0216 객실페이지 및 자잘한 ui 수정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -63,6 +63,7 @@
 <!--                            관리자-->
 <!--                        </a>-->
 <!--                    </li>-->
+<!--                    삭제요망-->
                 </ul>
             </div>
         </div>
