--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -84,7 +84,7 @@
                     <input type="text" hidden="hidden" name="htId" th:value="${hlist.htId}">
                     <td th:text="${hlist.htName}"></td>
                     <td th:text="${hlist.htAddress}"></td>
-                    <td th:if="${pricelist[i.index]} != null"><span th:text="${pricelist[i.index]}+'원'"></span></td>
+                    <td th:if="${pricelist[i.index]} != null"><span th:text="${#numbers.formatInteger(pricelist[i.index],3,'COMMA')}+원"></span></td>
                     <td th:if="${pricelist[i.index]} == null"><span th:text='0원'></span></td>
                     <td>
                         <button type="submit" class="btn btn-secondary hotelupdate">수정</button>
@@ -113,7 +113,7 @@
                     <td th:name="hotelHtId" th:text="${rlist.htName} + ' 호텔'"></td>
                     <td><img th:src="${rlist.rImg}" width="500px" height="220px" class="oriImg mx-auto d-block" style="border-radius: 10px" ></td>
                     <td  th:name="rName" th:text="${rlist.rName}"></td>
-                    <td  th:name="rPrice" th:text="${rlist.rPrice}"></td>
+                    <td  th:name="rPrice" th:text="${#numbers.formatInteger(rlist.rPrice,3,'COMMA')}+원"></td>
                     <td  th:name="rCnt" th:text="${rlist.rCnt}"></td>
                     <td>
 
