--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -65,8 +65,7 @@
                                             class="text-muted me-2">15:00 ▪ 체크아웃 12:00</span></div>
                                     <div class="hotel_price_remove">
                                         <div class="fs-lg text-accent pt-2" id="hotel_price_remove_id">
-                                            <span th:text="|숙박 ${roomDto.rPrice}원|"></span>
-                                            <!--                                                        <button class="btn btn-link px-0 py-0 text-danger" type="button">삭제</button>-->
+                                            <span th:text="|숙박 ${#numbers.formatInteger(roomDto.rPrice,3,'COMMA')}원|"></span>
                                         </div>
                                     </div>
                                 </div>
@@ -77,7 +76,7 @@
                             <div class="rounded-3 bg-light px-3 px-sm-4 py-4 w-100">
                                 <div class="text-center mb-4 pb-3 border-bottom">
                                     <h3 class="h5 mb-3 pb-1 text-dark">총액</h3>
-                                    <h4 class="fw-normal text-dark" th:text="|${roomDto.rPrice}원|"></h4>
+                                    <h4 class="fw-normal text-dark" th:text="${#numbers.formatInteger(roomDto.rPrice,3,'COMMA')}+원"></h4>
                                 </div>
 
                                 <div th:object="${memberDto}">
