--- a/src/main/resources/templates/roomList.html
+++ b/src/main/resources/templates/roomList.html
@@ -132,7 +132,7 @@
                     <img th:src="${list.rImg}" class="roomImg" >
                 </td>
                 <td th:name="rName" th:text="${list.rName}"></td>
-                <td th:name="rPrice" th:text="${list.rPrice}+'원'"></td>
+                <td th:name="rPrice" th:text="${#numbers.formatInteger(list.rPrice,3,'COMMA')}+'원'"></td>
                 <div hidden="hidden">
                     <input type="text" th:name="rId" th:value="${list.rId}"/>
                     <input type="text" class="start" th:name="rCheckin" th:value="${checkin}"/>
