0216 [modify] 메인페이지 검색기능 구현

--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -37,7 +37,7 @@
     <!--    달력-->
 
     <div class=" mb-3 my-3">
-        <form class="d-flex" action="/hotel" method="post">
+        <form class="d-flex" action="/hotelsearch" method="get">
             <input class="form-control sm-5 me-2" type="search" placeholder="숙소명 검색" aria-label="Search" name="htName">
             <button class="btn btn-outline-success" type="submit">검색</button>
         </form>
