--- a/src/main/resources/templates/roomList.html
+++ b/src/main/resources/templates/roomList.html
@@ -13,90 +13,15 @@
 
 <div class="container h-100 " layout:fragment="content">
 
-    <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="/imgs/hotels/hotel1.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="/imgs/imgUpload/2023/02/03/092c70af-8896-4a71-bed1-9469067b49d8_신사스테이.PNG" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="/imgs/imgUpload/2023/02/03/1480b46c-b960-46f2-8cc6-d27389390ebe_그랜드.PNG" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-
-    </div>
-    <div class="roomList_hotel_info d-flex flex-column   p-2">
-        <span class="fs-5 fw-bold" th:text="${hotelDto.htName}"/>
-        <p ><i class="fa-solid fa-location-dot text-secondary"></i><span class="card-text text-secondary mx-1 my-0" th:text="${hotelDto.htAddress}"></span></p>
-        <div class="divider border-bottom w-90"></div>
-        <span class="fs-5 fw-bold" >인기시설 및 서비스</span>
-        <img class="" src="/imgs/hotels/option.png" alt="" style="width: 500px">
-        <div class="divider mt-2 border-bottom w-90"></div>
-        <span class="fs-5 fw-bold" >객실선택</span>
-    </div>
-
-    <div class="daterange_box">
-        <form th:action="@{/room/list/}+${hotelDto.htId}" autocomplete="off">
-
-
-                    <label for="daterange">날짜 선택</label>
-                    <div class="input-group" >
-<!--                        <div class="daterange_box flex-row ">-->
-                            <div class="daterage_input_btn ">
-                      <input type="text" id="daterange" name="daterange" th:value="${#temporals.createToday()}" readonly style="width: 300px; border-radius: 10px" />
-                      <input type="text" class="start" name="checkin" th:value="${checkin}" hidden="hidden"/>
-                      <input type="text" class="end" name="checkout" th:value="${checkout}" hidden="hidden"/>
-                             </div>
-                            <div class="daterange_button_box text-center align-items-center justify-center">
-                                <button type="submit" class="btn btn-secondary mx-1" style="width: 100px; height: 46px;">검색</button>
-                            </div>
-<!--                        </div>-->
-                    </div>
-
-        </form>
-    </div>
-    <div      class="fow my-3">
-        <div class="row">
-<!--            row-cols-2-->
-            <div class="col-3 m-1" th:each="list : ${list}">
-                <div class="room_list_wrap " style="width: 343px; margin: 0 ">
-                <input type="text" class="col-3 " hidden=hidden th:name="hotelHtId" th:value="${list.hotelHtId}"/>
-                <div class="room_list_img text-center col-3 ">
-                    <img th:src="${list.rImg}" class="roomImg rounded" style="width: 310px; height: 218px " >
-                </div>
-                <div class="room_list_info d-flex flex-column col-11">
-                <span class="fw-bold fs-5" th:name="rName" th:text="${list.rName}"></span>
-                    <span class="p-2 m-1 rounded" style="background-color: #f8f8f8">기준 2인 / 최대 2인 - 금연객실 </span>
-                    <p><span class="fw-bold">숙박</span><span>(15:00~)</span></p>
-                <span class="fw-bold fs-5 text-end" th:name="rPrice" th:text="${list.rPrice}+'원'"></span>
-                    <button type="submit" class="btn btn-danger my-2">객실 선택하기</button>
-                </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-
-
-
-
-    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-    <script type="text/javascript"  src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <script src="/js/roomList.js" defer></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css"
+          href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>
 
     <style>
         td {
@@ -107,6 +32,7 @@
             width: 300px;
             height: 500px;
         }
+
         .roomImg {
             width: 500px;
             height: 500px;
@@ -162,66 +88,169 @@
 
     </style>
 
-<!--    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>-->
+<!--    <div id="carouselExample" class="carousel slide">-->
+<!--        <div class="carousel-inner">-->
+<!--            <div class="carousel-item active">-->
+<!--                <img src="/imgs/hotels/hotel1.png" class="d-block w-100" alt="...">-->
+<!--            </div>-->
+<!--            <div class="carousel-item">-->
+<!--                <img src="/imgs/imgUpload/2023/02/03/092c70af-8896-4a71-bed1-9469067b49d8_신사스테이.PNG"-->
+<!--                     class="d-block w-100" alt="...">-->
+<!--            </div>-->
+<!--            <div class="carousel-item">-->
+<!--                <img src="/imgs/imgUpload/2023/02/03/1480b46c-b960-46f2-8cc6-d27389390ebe_그랜드.PNG" class="d-block w-100"-->
+<!--                     alt="...">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">-->
+<!--            <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+<!--            <span class="visually-hidden">Previous</span>-->
+<!--        </button>-->
+<!--        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">-->
+<!--            <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+<!--            <span class="visually-hidden">Next</span>-->
+<!--        </button>-->
 
-<!--    <link rel="stylesheet" type="text/css"-->
-<!--          href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>-->
+<!--    </div>-->
 
-    <header>
-<!--        <th:block th:if="${hotelDto != null}">-->
-<!--            <h1 th:text="${hotelDto.htName}"/>-->
-<!--            <h3 th:text="${hotelDto.htAddress}"/>-->
-<!--            <h3 th:text="${hotelDto.htPhone}"/>-->
-<!--            &lt;!&ndash;    리스트로 그림 받아오기        &ndash;&gt;-->
-<!--            <section class="visual">-->
-<!--                <th:block th:if="${ilist != null}">-->
-<!--                    <tr th:each="ilist : ${ilist}">-->
-<!--            <img th:src="${ilist.getImg()}" class="oriImg">-->
-<!--                    </tr>-->
+    <section class="visual">
+        <th:block th:if="${ilist != null}">
+            <tr th:each="ilist : ${ilist}">
+                <img th:src="${ilist.getImg()}" class="oriImg">
+            </tr>
+        </th:block>
+    </section>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $.noConflict();
+            $('.visual').slick();
+        });
+    </script>
+
+    <div class="roomList_hotel_info d-flex flex-column   p-2">
+        <span class="fs-5 fw-bold" th:text="${hotelDto.htName}"/>
+        <p><i class="fa-solid fa-location-dot text-secondary"></i><span class="card-text text-secondary mx-1 my-0"
+                                                                        th:text="${hotelDto.htAddress}"></span></p>
+        <div class="divider border-bottom w-90"></div>
+        <span class="fs-5 fw-bold">인기시설 및 서비스</span>
+        <img class="" src="/imgs/hotels/option.png" alt="" style="width: 500px">
+        <div class="divider mt-2 border-bottom w-90"></div>
+        <span class="fs-5 fw-bold">객실선택</span>
+    </div>
+
+    <div class="daterange_box">
+        <form th:action="@{/room/list/}+${hotelDto.htId}" autocomplete="off">
+
+
+            <label for="daterange">날짜 선택</label>
+            <div class="input-group">
+                <!--                        <div class="daterange_box flex-row ">-->
+                <div class="daterage_input_btn ">
+                    <input type="text" id="daterange" name="daterange" th:value="${#temporals.createToday()}" readonly
+                           style="width: 300px; border-radius: 10px"/>
+                    <input type="text" class="start" name="checkin" th:value="${checkin}" hidden="hidden"/>
+                    <input type="text" class="end" name="checkout" th:value="${checkout}" hidden="hidden"/>
+                </div>
+                <div class="daterange_button_box text-center align-items-center justify-center">
+                    <button type="submit" class="btn btn-secondary mx-1" style="width: 100px; height: 46px;">검색</button>
+                </div>
+                <!--                        </div>-->
+            </div>
+
+        </form>
+    </div>
+    <div class="fow my-3">
+        <div class="row">
+            <!--            row-cols-2-->
+            <div class="col-3 m-1" th:each="list : ${list}">
+                <form role="form" method="post" action="/reservation">
+                    <div class="room_list_wrap " style="width: 343px; margin: 0 ">
+                        <input type="text" class="col-3 " hidden=hidden th:name="hotelHtId"
+                               th:value="${list.hotelHtId}"/>
+                        <div class="room_list_img text-center col-3 ">
+                            <img th:src="${list.rImg}" class="roomImg rounded" style="width: 310px; height: 218px ">
+                        </div>
+                        <div hidden="hidden">
+                            <input type="text" th:name="rId" th:value="${list.rId}"/>
+                            <input type="text" class="start" th:name="rCheckin" th:value="${checkin}"/>
+                            <input type="text" class="end" th:name="rCheckout" th:value="${checkout}"/>
+                        </div>
+                        <div class="room_list_info d-flex flex-column col-11">
+                            <span class="fw-bold fs-5" th:name="rName" th:text="${list.rName}"></span>
+                            <span class="p-2 m-1 rounded" style="background-color: #f8f8f8">기준 2인 / 최대 2인 - 금연객실 </span>
+                            <p><span class="fw-bold">숙박</span><span>(15:00~)</span></p>
+                            <span class="fw-bold fs-5 text-end" th:name="rPrice" th:text="${list.rPrice}+'원'"></span>
+                            <button type="submit" class="btn btn-danger my-2">객실 선택하기</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+    </div>
+
+
+
+<!--        <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>-->
+
+<!--        <link rel="stylesheet" type="text/css"-->
+<!--              href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>-->
+
+<!--    <header>-->
+<!--                <th:block th:if="${hotelDto != null}">-->
+<!--                    <h1 th:text="${hotelDto.htName}"/>-->
+<!--                    <h3 th:text="${hotelDto.htAddress}"/>-->
+<!--                    <h3 th:text="${hotelDto.htPhone}"/>-->
+<!--                    &lt;!&ndash;    리스트로 그림 받아오기        &ndash;&gt;-->
+<!--                    <section class="visual">-->
+<!--                        <th:block th:if="${ilist != null}">-->
+<!--                            <tr th:each="ilist : ${ilist}">-->
+<!--                    <img th:src="${ilist.getImg()}" class="oriImg">-->
+<!--                            </tr>-->
+<!--                        </th:block>-->
+<!--                    </section>-->
+<!--        <script type="text/javascript">-->
+<!--            $(document).ready(function () {-->
+<!--                $.noConflict();-->
+<!--                $('.visual').slick();-->
+<!--            });-->
+<!--        </script>-->
 <!--                </th:block>-->
-<!--            </section>-->
-            <script type="text/javascript">
-                $(document).ready(function() {
-                    $.noConflict();
-                    $('.visual').slick();
-                });
-            </script>
-<!--        </th:block>-->
-    </header>
+<!--    </header>-->
 
-<!--    <table>-->
-<!--        <form th:action="@{/room/list/}+${hotelDto.htId}">-->
-<!--            <input type="text" name="daterange" th:value="${#temporals.createToday()}"/>-->
-<!--            <input type="text" class="start" name="checkin" th:value="${checkin}" hidden="hidden"/>-->
-<!--            <input type="text" class="end" name="checkout" th:value="${checkout}" hidden="hidden"/>-->
-<!--            <button class="submitDate" type="submit" hidden="hidden"></button>-->
-<!--        </form>-->
+    <!--    <table>-->
+    <!--        <form th:action="@{/room/list/}+${hotelDto.htId}">-->
+    <!--            <input type="text" name="daterange" th:value="${#temporals.createToday()}"/>-->
+    <!--            <input type="text" class="start" name="checkin" th:value="${checkin}" hidden="hidden"/>-->
+    <!--            <input type="text" class="end" name="checkout" th:value="${checkout}" hidden="hidden"/>-->
+    <!--            <button class="submitDate" type="submit" hidden="hidden"></button>-->
+    <!--        </form>-->
 
-<!--        <tr>-->
-<!--            <th>사진</th>-->
-<!--            <th>객실이름</th>-->
-<!--            <th>객실가격</th>-->
-<!--        </tr>-->
+    <!--        <tr>-->
+    <!--            <th>사진</th>-->
+    <!--            <th>객실이름</th>-->
+    <!--            <th>객실가격</th>-->
+    <!--        </tr>-->
 
-<!--        <tr th:each="list : ${list}">-->
-<!--            <form role="form" method="post" action="/reservation">-->
-<!--                <input type="text" hidden=hidden th:name="hotelHtId" th:value="${list.hotelHtId}"/>-->
-<!--                <td>-->
-<!--                    <img th:src="${list.rImg}" class="roomImg" >-->
-<!--                </td>-->
-<!--                <td th:name="rName" th:text="${list.rName}"></td>-->
-<!--                <td th:name="rPrice" th:text="${list.rPrice}+'원'"></td>-->
-<!--                <div hidden="hidden">-->
-<!--                    <input type="text" th:name="rId" th:value="${list.rId}"/>-->
-<!--                    <input type="text" class="start" th:name="rCheckin" th:value="${checkin}"/>-->
-<!--                    <input type="text" class="end" th:name="rCheckout" th:value="${checkout}"/>-->
-<!--                </div>-->
-<!--                <td>-->
-<!--                    <button type="submit">객실 예약하기</button>-->
-<!--                </td>-->
-<!--            </form>-->
-<!--        </tr>-->
-<!--    </table>-->
+    <!--        <tr th:each="list : ${list}">-->
+    <!--            <form role="form" method="post" action="/reservation">-->
+    <!--                <input type="text" hidden=hidden th:name="hotelHtId" th:value="${list.hotelHtId}"/>-->
+    <!--                <td>-->
+    <!--                    <img th:src="${list.rImg}" class="roomImg" >-->
+    <!--                </td>-->
+    <!--                <td th:name="rName" th:text="${list.rName}"></td>-->
+    <!--                <td th:name="rPrice" th:text="${list.rPrice}+'원'"></td>-->
+<!--                    <div hidden="hidden">-->
+<!--                        <input type="text" th:name="rId" th:value="${list.rId}"/>-->
+<!--                        <input type="text" class="start" th:name="rCheckin" th:value="${checkin}"/>-->
+<!--                        <input type="text" class="end" th:name="rCheckout" th:value="${checkout}"/>-->
+<!--                    </div>-->
+    <!--                <td>-->
+    <!--                    <button type="submit">객실 예약하기</button>-->
+    <!--                </td>-->
+    <!--            </form>-->
+    <!--        </tr>-->
+    <!--    </table>-->
 </div>
 </body>
 </html>
