--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,8 +9,12 @@
     <header>
     <nav class="navbar navbar-expand-lg shadow-lg sticky-top ">
         <div class="header_container"><a href="/" class="navbar-brand align-middle">
+           <div class="header_img">
             <img id="header_logo" src="/imgs/logos/jspo-logo-white3.png" alt="logo"  >
+           </div>
+
         </a>
+        <div class="header_nav_menu">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +71,9 @@
                 </ul>
             </div>
         </div>
+        </div>
     </nav>
+
     </header>
 </th:block>
 </body>
