--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,6 +1,6 @@
 
 .login_wrap{
-    height: 100vh;
+    height: 80vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -16,8 +16,7 @@
     border-radius: 12px;
     background-color: #ffffff;
     box-shadow: 5px 5px 10px  1px  rgba(0, 0, 0, 0.2);
-    position: absolute;
-    top: 350px;
+
 }
 
 .login .logo{
@@ -63,4 +62,23 @@
     text-decoration: none;
     color: black;
 }
+
+#findEmail {
+    display: none;
+    width: 400px;
+    padding: 20px 60px;
+    background-color: #fefefe;
+    border: 1px solid #888;
+    border-radius: 3px;
+}
+
+#findPwd {
+    display: none;
+    width: 400px;
+    padding: 20px 60px;
+    background-color: #fefefe;
+    border: 1px solid #888;
+    border-radius: 3px;
+}
+
 
