--- a/src/main/resources/static/css/myPage.css
+++ b/src/main/resources/static/css/myPage.css
@@ -1,6 +1,6 @@
 
 .myPage_wrap{
-    /*height: 100vh;*/
+    height: 80vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -15,8 +15,6 @@
     border-radius: 12px;
     background-color: #ffffff;
     box-shadow: 5px 5px 10px  1px  rgba(0, 0, 0, 0.2);
-    position: absolute;
-    top: 350px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
