--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,37 +3,18 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/default_layout}">
-
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+</head>>
 
 <body>
 <div class="container" layout:fragment="content">
-    <style>
-        #findEmail {
-            display: none;
-            width: 400px;
-            padding: 20px 60px;
-            background-color: #fefefe;
-            border: 1px solid #888;
-            border-radius: 3px;
-        }
-
-        #findPwd {
-            display: none;
-            width: 400px;
-            padding: 20px 60px;
-            background-color: #fefefe;
-            border: 1px solid #888;
-            border-radius: 3px;
-        }
-    </style>
 
     <div class="login_wrap justify-content-center">
         <div class="login">
 
             <div class="logo">
-
                 <img class="text-center" src="/imgs/logos/jspo-logo-final.png" alt="" height="100px">
-
             </div>
 
             <form action="/login" method="post" name="loginForm" class="needs-validation">
@@ -55,19 +36,17 @@
                         </div>
                     </div>
 
-
+<!--                    form-check-input-->
                     <div class="form-group form-check">
-
-                        <input class="form-check-input" type="checkbox" id="remember" name="remember"
+                        <input class="form-check-input mt-0" type="checkbox" id="remember" name="remember"
                                th:if="${email == null}">
-                        <input class="form-check-input" type="checkbox" id="remember-checked" name="remember"
+                        <input class="form-check-input mt-0" type="checkbox" id="remember-checked" name="remember"
                                th:if="${email != null}" checked="checked">
                         <label class="form-check-label" for="remember">이메일 기억하기</label>
 
                     </div>
 
-
-                    <input class="btn btn-success w-100" type="submit" value="로그인">
+                    <input class="btn btn-success" type="submit" value="로그인">
 
                     <div class="form-group">
                         <ul>
@@ -127,6 +106,8 @@
         </div>
 
     </div>
+
+
     <script>
         function modal(id) {
             var zIndex = 9999;
