--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -49,8 +49,8 @@
                         <!-- Item-->
                         <div class="d-sm-flex justify-content-between align-items-center mt-3 mb-4 py-3  border-top border-bottom">
                             <div class="d-block d-sm-flex align-items-center text-center text-sm-start"><a
-                                    class="d-inline-block flex-shrink-0 mx-auto me-sm-4" href="#"><img
-                                    src="/imgs/hotels/hotel1.png" id="hotel_picture" width="200px" height="140px"
+                                    class="d-inline-block flex-shrink-0 mx-auto me-sm-4" href="#">
+                                <img th:src="${hotelDto.htImg}" id="hotel_picture" width="200px" height="140px"
                                     alt="hotel image"></a>
                                 <div class="pt-2">
                                     <h3 class="product-title fs-base mb-2"><a href="#"
