--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -10,10 +10,12 @@
 
 header .navbar{
     width: 100vw;
-    height: 8vh;
+    height: 100px;
     background-color: #6f2cf4;
 
     display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
 }
 
@@ -22,12 +24,13 @@ header .navbar a{
     font-size: 1.2rem;
 }
 
-header .navbar .header_container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+/*header .navbar .header_container{*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
 
-}
+/*}*/
+
 
 
 header .navbar .header_container .collapse .navbar-nav li{
@@ -39,7 +42,25 @@ header .navbar .header_container .collapse .navbar-nav li:nth-child(5){
     margin-right: 50px;
 }
 
+header .navbar .header_nav_menu{
+    width: 100%;
+    height: 8vh;
+    margin-left: 30px;
+    display: flex;
+    align-items: center;
+
+}
+
+header .navbar .header_img{
+    width: 300px;
+}
 
 #header_logo{
     margin-left: 2rem;
+    background-size: cover;
+}
+
+
+#navbarSupportedContent{
+    margin-right: 85px;
 }
