--- a/src/main/resources/templates/adminupdateView.html
+++ b/src/main/resources/templates/adminupdateView.html
@@ -152,7 +152,7 @@
               <div class="input-group input-group-sm mb-3">
                 <span class="input-group-text">호텔 이미지</span>
                 <input type="file" class="form-control" id="htImg" name="file"
-                       aria-describedby="inputGroup-sizing-default" required>
+                       aria-describedby="inputGroup-sizing-default" >
               </div>
             </div>
 
