--- a/src/main/resources/static/css/reserved.css
+++ b/src/main/resources/static/css/reserved.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("../imgs/hotels/hotel1.png");
+    /*background-image: url("../imgs/hotels/hotel1.png");*/
     background-size: cover;
     width: 200px;
     height: 180px;
