0218 [modify] footer & login checkbox

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,24 @@
 
         <div class="footer_wrapper">
         <div class="footer__container">
-                    Footer222
+            <p><span class="fw-bold">ABOUT TEAM JSPO | 팀원소개</span></p>
+            <p><span>FRONT-END : 변재철 | BACK-END : 김반석, 이건상</span></p>
+            <div class="language_lib">
+                <p class="my-1"><span >사용언어 & 라이브러리</span></p>
+                <img src="/imgs/footer/language.png" alt="">
+            </div>
+
+            <div class="db_framework">
+                <p class="my-1"><span>DB & Framework</span></p>
+                <img src="/imgs/footer/dbframework.png" alt="">
+            </div>
+
+            <div class="tools">
+                <p class="my-1"><span>Tool</span></p>
+                <img src="/imgs/footer/tool.png" alt="">
+            </div>
+
+
         </div>
         </div>
     </footer>
