--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -1,13 +1,22 @@
 
-.footer__container{
-    height: 240px;
+.footer_wrapper{
+    height: 320px;
     width: 100vw;
     background-color: #6f2cf4;
-    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+}
+
+.footer__container{
+
+
+    color: white;
+    display: flex;
+    flex-direction: column;
+    /*align-items: ;*/
+    /*justify-content: ;*/
     /*position : relative;*/
     /*bottom: 0 ;*/
 }
