--- a/src/main/resources/static/css/mainPage.css
+++ b/src/main/resources/static/css/mainPage.css
@@ -1,6 +1,6 @@
 .ready{
     width: 100vw;
-    height: 80vh;
+    height: 429px;
     display: flex;
     flex-direction: column;
     align-items: center;
